--- a/public/themes/simpleboot3/public/footer.html
+++ b/public/themes/simpleboot3/public/footer.html
@@ -36,36 +36,38 @@
                 <div class="item">
                     <div class="title">走进华劳</div>
                     <div class="text">
-                        <a href="javascript:void(0);">关于华劳</a>
-                        <a href="javascript:void(0);">发展历程</a>
+                        <a href="{:cmf_url('portal/About/index')}">关于华劳</a>
+                        <a href="{:cmf_url('portal/About/index')}">发展历程</a>
                     </div>
                     <div class="text">
-                        <a href="javascript:void(0);">新闻资讯</a>
-                        <a href="javascript:void(0);">合作客户</a>
+                        <a href="{:cmf_url('portal/News/index')}">新闻资讯</a>
+                        <a href="{:cmf_url('portal/Customer/index')}">合作客户</a>
                     </div>
                     <div class="text">
-                        <a href="javascript:void(0);">联系我们</a>
-                        <a href="javascript:void(0);">资质证书</a>
+                        <a href="{:cmf_url('portal/Contacts/index')}">联系我们</a>
+                        <a href="{:cmf_url('portal/About/index')}">资质证书</a>
                     </div>
                     <div class="text">
-                        <a href="javascript:void(0);">员工查询</a>
+                        <a href="{:cmf_url('portal/About/index')}">员工查询</a>
                     </div>
                 </div>
                 <div class="item">
                     <div class="title">企业应用</div>
                     <div class="text">
-                        <a href="javascript:void(0);">雇工伞服务系统</a>
-                        <a href="javascript:void(0);">企业CRM</a>
+                        <a href="{:cmf_url('portal/Application/index')}">雇工伞服务系统</a>
+                    </div>
+					<div class="text">
+					    <a href="{:cmf_url('portal/Application/index')}">企业CRM</a>
+					</div>
+                    <div class="text">
+                        <a href="{:cmf_url('portal/Application/index')}">劳务派遣</a>
+                    </div>
+                    <!-- <div class="text">
+                        <a href="{:cmf_url('portal/Application/index')}">刷活APP</a>
                     </div>
                     <div class="text">
-                        <a href="javascript:void(0);">劳务派遣</a>
-                    </div>
-                    <div class="text">
-                        <a href="javascript:void(0);">刷活APP</a>
-                    </div>
-                    <div class="text">
-                        <a href="javascript:void(0);">刷活小程序</a>
-                    </div>
+                        <a href="{:cmf_url('portal/Application/index')}">刷活小程序</a>
+                    </div> -->
                 </div>
             </div>
             <div class="foot-top-right">
@@ -75,14 +77,14 @@
         <div class="foot-center">
             <ul>
                 <li><a href="javascript:void(0);">中政外包</a></li>
-                <li><a href="javascript:void(0);">中洁清洁</a></li>
-                <li><a href="javascript:void(0);">华劳人力</a></li>
-                <li><a href="javascript:void(0);">中劳劳务</a></li>
+                <li><a href="https://www.chinacleaning.com" target="_blank">中洁清洁</a></li>
+                <li><a href="https://www.hualaohr.com" target="_blank">华劳人力</a></li>
+                <li><a href="https://www.laowufenbao.com" target="_blank">中劳劳务</a></li>
                 <li><a href="javascript:void(0);">中朗安服</a></li>
-                <li><a href="javascript:void(0);">金伞保险</a></li>
-                <li><a href="javascript:void(0);">雇工伞</a></li>
-                <li><a href="javascript:void(0);">和谐关系</a></li>
-                <li><a href="javascript:void(0);">德劳网</a></li>
+                <li><a href="https://www.jinsanbaoxian.com" target="_blank">金伞保险</a></li>
+                <li><a href="https://www.eqibao.cn" target="_blank">雇工伞</a></li>
+                <li><a href="https://hexie12333.hualaogroup.com" target="_blank">和谐关系</a></li>
+                <li><a href="https://74cms.hualaogroup.com" target="_blank">德劳网</a></li>
             </ul>
         </div>
         <div class="foot-bottom">
@@ -106,23 +108,23 @@
     </div>
     <div class="inner hidden-lg hidden-md hidden-sm">
         <div class="foot-phone-top">
-            <div class="item"><a href="javascript:void(0);">关于华劳</a></div>
-            <div class="item"><a href="javascript:void(0);">新闻资讯</a></div>
-            <div class="item"><a href="javascript:void(0);">联系我们</a></div>
-            <div class="item"><a href="javascript:void(0);">企业应用</a></div>
+            <div class="item"><a href="{:cmf_url('portal/About/index')}">关于华劳</a></div>
+            <div class="item"><a href="{:cmf_url('portal/News/index')}">新闻资讯</a></div>
+            <div class="item"><a href="{:cmf_url('portal/Contacts/index')}">联系我们</a></div>
+            <div class="item"><a href="{:cmf_url('portal/Application/index')}">企业应用</a></div>
         </div>
         <div class="foot-phone-center">
             <div class="flex-box">
                 <div class="item"><a href="javascript:void(0);">中政外包</a></div>
-                <div class="item"><a href="javascript:void(0);">中洁清洁</a></div>
-                <div class="item"><a href="javascript:void(0);">华劳人力</a></div>
-                <div class="item"><a href="javascript:void(0);">中劳劳务</a></div>
+                <div class="item"><a href="https://www.chinacleaning.com" target="_blank">中洁清洁</a></div>
+                <div class="item"><a href="https://www.hualaohr.com" target="_blank">华劳人力</a></div>
+                <div class="item"><a href="https://www.laowufenbao.com" target="_blank">中劳劳务</a></div>
             </div>
             <div class="flex-box">
                 <div class="item"><a href="javascript:void(0);">中朗安服</a></div>
-                <div class="item"><a href="javascript:void(0);">金伞保险</a></div>
-                <div class="item"><a href="javascript:void(0);">雇工伞</a></div>
-                <div class="item"><a href="javascript:void(0);">和谐关系</a></div>
+                <div class="item"><a href="https://www.jinsanbaoxian.com" target="_blank">金伞保险</a></div>
+                <div class="item"><a href="https://www.eqibao.cn" target="_blank">雇工伞</a></div>
+                <div class="item"><a href="https://hexie12333.hualaogroup.com" target="_blank">和谐关系</a></div>
             </div>
             <div class="erweima">
                 <img src="__TMPL__/public/assets/style/imgs/index/hualao-erweima.png" />
