--- a/public/themes/simpleboot3/portal/application.html
+++ b/public/themes/simpleboot3/portal/application.html
@@ -72,14 +72,22 @@
                         </div>
                     </div>
                 </div>
-                <div class="flex-box">
-                    <!-- <div class="box-3">
-                        <img src="__TMPL__/public/assets/style/imgs/application/3.png" />
+                <div class="flex-box flex-box-2">
+                    <div class="box-2 crm">
                         <div class="flex-box">
-                            <div class="name">CRM小程序</div>
-                            <div><a href="javascript:void(0)">扫码访问</a></div>
+                            <div class="left">
+                                <img src="__TMPL__/public/assets/style/imgs/application/和谐.png" />
+                                <div>和谐关系</div>
+                            </div>
+                            <div class="right">
+                                <div class="item">
+                                    <img src="__TMPL__/public/assets/style/imgs/application/hexie.png" />
+                                    <div>扫码访问</div>
+                                    <!-- <a href="javascript:void(0)">劳务派遣管理系统</a> -->
+                                </div>
+                            </div>
                         </div>
-                    </div> -->
+                    </div>
                     <div class="box-2 crm">
                         <div class="flex-box">
                             <div class="left">
