--- a/public/themes/simpleboot3/public/customers.html
+++ b/public/themes/simpleboot3/public/customers.html
@@ -13,7 +13,7 @@
 			        console.log(result);//打印服务端返回的数据(调试用)
 			        if (result.code == 1) {
 						console.log(result.data);	
-			            var arr = result.data.data;
+			            var arr = result.data;
 			            if(arr.length!=0){
 			                var html = "";
 			                for(var i = 0;i<arr.length;i++){
