--- a/public/themes/simpleboot3/portal/news.html
+++ b/public/themes/simpleboot3/portal/news.html
@@ -19,7 +19,7 @@
 		
 	</div>
 	<div class="pageLimitbox">
-	    <ul class="pagination"> <span class="pageSpan"></span></ul>
+	    <!-- <ul class="pagination"> <span class="pageSpan"></span></ul> -->
 	    <ul id="pageLimit" class="pagination pagination-lg"></ul>
 	</div>
 </div>
@@ -28,6 +28,7 @@
 <script src="__TMPL__/public/assets/style/js/bootstrap-paginator.js"></script>
 <script type="text/javascript">
     $(function () {
+		let pageCount = 20;
 		function timestampToTime(timestamp) {
 		        var date = new Date(timestamp * 1000);//时间戳为10位需*1000，时间戳为13位的话不需乘1000
 		        var Y = date.getFullYear() + '-';
@@ -48,6 +49,7 @@
 			        if (result.code == 1) {
 						console.log(result.data);	
 			            var arr = result.data.list.data;
+						pageCount =  result.data.list.total;
 			            if(arr.length!=0){
 			                var html = "";
 			                html += '<div class="list">';
@@ -71,6 +73,7 @@
 						}else{
 							$(".pageSpan").html('');
 						}
+						initPage(result.data.list.total)
 			        }
 			    },
 			    error : function() {
@@ -134,6 +137,47 @@
 			var newLocation= location.substring(0, location.length-10);
 			window.open(newLocation+'detail.html?id='+id+"&cid="+cid)
 		})
+		
+		function initPage(pageCount){
+			$('#pageLimit').bootstrapPaginator({
+				currentPage: 1, //当前页
+				totalPages: (pageCount % 10) == 0 ? (pageCount / 10) : (pageCount / 10) + 1, //总页
+				size: "normal",
+				bootstrapMajorVersion: 3,
+				alignment: "right",
+				numberOfPages: 10,
+				itemTexts: function (type, page, current) {
+					switch (type) {
+						case "first":
+							return "首页";
+						case "prev":
+							return "上一页";
+						case "next":
+							return "下一页";
+						case "last":
+							return "末页";
+						case "page":
+							return page;
+					}
+				},onPageClicked: function (event, originalEvent, type, page) {
+					//这个是点击事件 点击分页
+					console.log("请求的是第："+page+"页")
+					$.ajax({
+					    type: "post",
+					    url: "{:url('App/getNewsList')}" ,
+					    data: {},
+					    dataType: "json",
+					    success: function (res) {
+							
+						},
+						error : function() {
+						    alert("该文章未发布！");
+						}
+					})
+				}
+			})
+		}
+		
     })
 </script>
 </body>
