新闻列表 分页  样式优化

--- a/public/themes/simpleboot3/portal/index.html
+++ b/public/themes/simpleboot3/portal/index.html
@@ -152,7 +152,7 @@
                                 <li>
                                     <div class="icon"></div>
                                     <div class="content">
-                                        <div class="title">政务编外派遣服务解决方案</div>
+                                        <div class="title">建筑工程、机电安装劳务分包解决方案</div>
                                         <div class="text">提高行政效率、降低行政成本、规避劳务风险、更省心、更便捷</div>
                                     </div>
                                 </li>
