--- a/public/themes/simpleboot3/public/head.html
+++ b/public/themes/simpleboot3/public/head.html
@@ -57,7 +57,88 @@
                             <p><a href="{:cmf_url('portal/Index/index')}" title="首页">首页</a></p>
                         </li>
                         <li data-url="product">
-                            <p><a href="{:cmf_url('portal/Product/index')}" title="产品服务">产品服务</a></p>
+                            <p><a href="javascript:void(0)" title="产品服务">产品服务</a></p>
+							<div class="menu-dropdown" id="menu-dropdown-1">
+								<div id="menu-dropdown-wrapper" class="menu-dropdown-wrapper">
+									<div id="menu-dropdown-content-wrapper" class="menu-dropdown-content-wrapper" style="border:none;height:100%">
+										<div class="menu-dropdown-content-2 flex-box" id="menu-dropdown-content"  style="height:100%">
+											<ul class="nav-item-title">
+												<li class="title-active">华劳人力</li>
+												<li>中政外包</li>
+												<li>中洁清洁</li>
+												<li>金伞保险</li>
+												<li>中劳劳务</li>
+												<li>中朗安服</li>
+												<li>和谐调解</li>
+												<li>刷活招聘平台</li>
+											</ul>
+											<ul class="nav-item-text" style="height:100%;border-left: solid 1px #e6e6e6;">
+												<li class="nav-item-text-list text-active">
+													<ul class="nav-item-text-item flex">
+														<li><a href="{:cmf_url('portal/Product/index',array('id'=>1))}" title="劳务派遣">劳务派遣</a></li>
+														<li><a href="{:cmf_url('portal/Product/index',array('id'=>2))}" title="岗位外包">岗位外包</a></li>
+														<li><a href="{:cmf_url('portal/Product/index',array('id'=>3))}" title="业务外包">业务外包</a></li>
+														<li><a href="{:cmf_url('portal/Product/index',array('id'=>4))}" title="产线外包">产线外包</a></li>
+														<li><a href="{:cmf_url('portal/Product/index',array('id'=>5))}" title="招聘流程外包（RPO）">招聘流程外包（RPO）</a></li>
+														<li><a href="{:cmf_url('portal/Product/index',array('id'=>6))}" title="灵活用工">灵活用工</a></li>
+													</ul>
+												</li>
+												<li class="nav-item-text-list">
+													<ul class="nav-item-text-item flex">
+														<li><a href="{:cmf_url('portal/Product/index',array('id'=>1))}" title="政务编外派遣服务">政务编外派遣服务</a></li>
+														<li><a href="{:cmf_url('portal/Product/index',array('id'=>2))}" title="政务外包服务">政务外包服务</a></li>
+													</ul>
+												</li>
+												<li class="nav-item-text-list">
+													<ul class="nav-item-text-item flex">
+														<li><a href="{:cmf_url('portal/Product/index',array('id'=>1))}" title="国企和上市物业公司清洁外包">国企和上市物业公司清洁外包</a></li>
+														<li><a href="{:cmf_url('portal/Product/index',array('id'=>2))}" title="公建/写字楼清洁外包">公建/写字楼清洁外包</a></li>
+														<li><a href="{:cmf_url('portal/Product/index',array('id'=>3))}" title="酒店清洁服务">酒店清洁服务</a></li>
+														<li><a href="{:cmf_url('portal/Product/index',array('id'=>4))}" title="工业园区清洁服务">工业园区清洁服务</a></li>
+														<li><a href="{:cmf_url('portal/Product/index',array('id'=>5))}" title="城市环境清洁服务">城市环境清洁服务</a></li>
+													</ul>
+												</li>
+												<li class="nav-item-text-list">
+													<ul class="nav-item-text-item flex">
+														<li><a href="{:cmf_url('portal/Product/index',array('id'=>1))}" title="雇主责任险">雇主责任险</a></li>
+														<li><a href="{:cmf_url('portal/Product/index',array('id'=>2))}" title="工伤补充险">工伤补充险</a></li>
+														<li><a href="{:cmf_url('portal/Product/index',array('id'=>3))}" title="雇工伞">雇工伞</a></li>
+														<li><a href="{:cmf_url('portal/Product/index',array('id'=>4))}" title="建工宝">建工宝</a></li>
+													</ul>
+												</li>
+												<li class="nav-item-text-list">
+													<ul class="nav-item-text-item flex">
+														<li><a href="{:cmf_url('portal/Product/index',array('id'=>1))}" title="建筑工程劳务分包">建筑工程劳务分包</a></li>
+														<li><a href="{:cmf_url('portal/Product/index',array('id'=>2))}" title="机电安装劳务分包">机电安装劳务分包</a></li>
+													</ul>
+												</li>
+												<li class="nav-item-text-list">
+													<ul class="nav-item-text-item flex">
+														<li><a href="{:cmf_url('portal/Product/index',array('id'=>1))}" title="保安服务">保安服务</a></li>
+														<li><a href="{:cmf_url('portal/Product/index',array('id'=>2))}" title="安检服务">安检服务</a></li>
+														<li><a href="{:cmf_url('portal/Product/index',array('id'=>3))}" title="保镖服务">保镖服务</a></li>
+														<li><a href="{:cmf_url('portal/Product/index',array('id'=>4))}" title="临勤服务">临勤服务</a></li>
+														<li><a href="{:cmf_url('portal/Product/index',array('id'=>4))}" title="智慧安防">智慧安防</a></li>
+													</ul>
+												</li>
+												<li class="nav-item-text-list">
+													<ul class="nav-item-text-item flex">
+														<li><a href="{:cmf_url('portal/Product/index',array('id'=>1))}" title="劳资调解服务">劳资调解服务</a></li>
+														<li><a href="{:cmf_url('portal/Product/index',array('id'=>2))}" title="法务咨询服务">法务咨询服务</a></li>
+													</ul>
+												</li>
+												<li class="nav-item-text-list">
+													<ul class="nav-item-text-item flex">
+														<li><a href="{:cmf_url('portal/Service/index',array('id'=>1))}" title="我要找活">我要找活</a></li>
+														<li><a href="{:cmf_url('portal/Service/index',array('id'=>2))}" title="我要招人">我要招人</a></li>
+														<li><a href="{:cmf_url('portal/Service/index',array('id'=>2))}" title="刷活APP下载">刷活APP下载</a></li>
+													</ul>
+												</li>
+											</ul>
+										</div>
+									</div>
+								</div>
+							</div>
                         </li>
                         <li data-url="solution">
                             <p><a href="{:cmf_url('portal/Solution/index')}" title="解决方案">解决方案</a></p>
@@ -181,7 +262,7 @@
             var arr = location.split("/");
             if (location == '/') {
                 $('.header-box li').eq(0).addClass('active');
-            } else if (arr[2] === "service") {
+            } else if (arr[2] === "product") {
                 $('.header-box li').eq(1).addClass('active');
             } else {
                 for (var i = 0; i < $('.header-box li').length; i++) {
