--- a/public/themes/simpleboot3/public/head.html
+++ b/public/themes/simpleboot3/public/head.html
@@ -141,7 +141,27 @@
 							</div>
                         </li>
                         <li data-url="solution">
-                            <p><a href="{:cmf_url('portal/Solution/index')}" title="解决方案">解决方案</a></p>
+                            <p><a href="javascript:void(0)" title="解决方案">解决方案</a></p>
+							<div class="menu-dropdown" id="menu-dropdown-1">
+								<div id="menu-dropdown-wrapper" class="menu-dropdown-wrapper">
+									<div id="menu-dropdown-content-wrapper" class="menu-dropdown-content-wrapper" style="border:none;height:100%">
+										<div class="menu-dropdown-content-2 flex-box" id="menu-dropdown-content"  style="height:100%">
+											<!-- <ul class="nav-item-title">
+												<li class="title-active">解决方案</li>
+											</ul> -->
+											<ul class="nav-item-text" style="height:100%;">
+												<li class="nav-item-text-list text-active">
+													<ul class="nav-item-text-item flex-box">
+														<li><a href="{:cmf_url('portal/Solution/index',array('id'=>1))}" title="企业规模用工解决方案">企业规模用工解决方案</a></li>
+														<li><a href="{:cmf_url('portal/Solution/index',array('id'=>2))}" title="企业用工风险解决方案">企业用工风险解决方案</a></li>
+														<li><a href="{:cmf_url('portal/Solution/index',array('id'=>3))}" title="全国人事社保解决方案">全国人事社保解决方案</a></li>
+													</ul>
+												</li>
+											</ul>
+										</div>
+									</div>
+								</div>
+							</div>
                         </li>
                         <li data-url="news">
                             <p><a href="{:cmf_url('portal/News/index')}" title="新闻中心">新闻咨询</a></p>
